Add Benchmark mode

--- a/Demo_code_Fireducks_vs_pandas.ipynb
+++ b/Demo_code_Fireducks_vs_pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr5CzLQEywxFsTRg765fGi",
+      "authorship_tag": "ABX9TyPpO2rJM1nn/IHQKlKgDygj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,42 +28,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XKlcf1xCxVgA",
-        "outputId": "2ac37fe0-fa8d-4ab4-9397-ccf74bd31f76"
+        "outputId": "416b4260-a452-4a4f-c4e5-c03d826199d4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting fireducks\n",
-            "  Downloading fireducks-1.2.6-cp311-cp311-manylinux_2_28_x86_64.whl.metadata (1.0 kB)\n",
-            "Collecting firefw==1.2.6 (from fireducks)\n",
-            "  Downloading firefw-1.2.6-py3-none-any.whl.metadata (818 bytes)\n",
+            "Requirement already satisfied: fireducks in /usr/local/lib/python3.11/dist-packages (1.2.7)\n",
+            "Requirement already satisfied: firefw==1.2.7 in /usr/local/lib/python3.11/dist-packages (from fireducks) (1.2.7)\n",
             "Requirement already satisfied: pandas<2.3.0,>=1.5.3 in /usr/local/lib/python3.11/dist-packages (from fireducks) (2.2.2)\n",
-            "Collecting pyarrow<19.1,>=19.0 (from fireducks)\n",
-            "  Downloading pyarrow-19.0.1-cp311-cp311-manylinux_2_28_x86_64.whl.metadata (3.3 kB)\n",
+            "Requirement already satisfied: pyarrow<19.1,>=19.0 in /usr/local/lib/python3.11/dist-packages (from fireducks) (19.0.1)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2.0.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2025.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas<2.3.0,>=1.5.3->fireducks) (1.17.0)\n",
-            "Downloading fireducks-1.2.6-cp311-cp311-manylinux_2_28_x86_64.whl (7.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.4/7.4 MB\u001b[0m \u001b[31m33.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading firefw-1.2.6-py3-none-any.whl (12 kB)\n",
-            "Downloading pyarrow-19.0.1-cp311-cp311-manylinux_2_28_x86_64.whl (42.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.1/42.1 MB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pyarrow, firefw, fireducks\n",
-            "  Attempting uninstall: pyarrow\n",
-            "    Found existing installation: pyarrow 18.1.0\n",
-            "    Uninstalling pyarrow-18.1.0:\n",
-            "      Successfully uninstalled pyarrow-18.1.0\n",
-            "Successfully installed fireducks-1.2.6 firefw-1.2.6 pyarrow-19.0.1\n",
             "✅ Created 'sales_data.csv'\n"
           ]
         }
@@ -71,6 +57,8 @@
       "source": [
         "\n",
         "!pip install fireducks\n",
+        "\n",
+        "FIREDUCKS_FLAG=\"--benchmark-mode\"\n",
         "\n",
         "\n",
         "import pandas as pd\n",
@@ -109,16 +97,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7UfW3huyBqc",
-        "outputId": "bc1b51d5-400d-4200-d41b-30b654365690"
+        "outputId": "87f171b0-1f44-43bf-cd04-77304224c397"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📄 Pandas Read Time: 0.712 sec\n",
-            "🔥 FireDucks Read Time: 0.0514 sec\n"
+            "📄 Pandas Read Time: 0.8643 sec\n",
+            "🔥 FireDucks Read Time: 0.0347 sec\n"
           ]
         }
       ]
@@ -141,16 +129,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oppnhxVLyN_U",
-        "outputId": "37f4443d-6db1-44ca-a444-69351d5735df"
+        "outputId": "8d84936c-c523-4dd2-a300-d95a7c6b2a50"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📉 Pandas Filter Time: 0.0801 sec\n",
-            "🔥 FireDucks Filter Time: 0.0057 sec\n"
+            "📉 Pandas Filter Time: 0.0511 sec\n",
+            "🔥 FireDucks Filter Time: 0.0009 sec\n"
           ]
         }
       ]
@@ -176,16 +164,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HJLIKFb0fhH",
-        "outputId": "9d640637-9c58-4160-bf64-a16af5c9fa8a"
+        "outputId": "efd701da-5a6c-46a1-f6ae-1a8f78b71604"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📊 Pandas GroupBy Time: 0.0626 sec\n",
-            "🔥 FireDucks GroupBy Time: 0.0076 sec\n"
+            "📊 Pandas GroupBy Time: 0.0481 sec\n",
+            "🔥 FireDucks GroupBy Time: 0.0029 sec\n"
           ]
         }
       ]
@@ -210,16 +198,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "972Kro1W0mvu",
-        "outputId": "0c2c356b-2928-4351-e258-2e2e9d6901fb"
+        "outputId": "732bd6b1-a28b-48d4-9cad-54a48d411046"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🔽 Pandas Sort Time: 0.0044 sec\n",
-            "🔥 FireDucks Sort Time: 0.0007 sec\n",
+            "🔽 Pandas Sort Time: 0.0007 sec\n",
+            "🔥 FireDucks Sort Time: 0.0004 sec\n",
             "✅ Sales Benchmark Completed!\n"
           ]
         }
