--- a/Demo_code_Fireducks_vs_pandas.ipynb
+++ b/Demo_code_Fireducks_vs_pandas.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpO2rJM1nn/IHQKlKgDygj",
+      "gpuType": "V28",
+      "authorship_tag": "ABX9TyMJaGNQ+wgPT6lPqWPUaAm1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -28,28 +30,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XKlcf1xCxVgA",
-        "outputId": "416b4260-a452-4a4f-c4e5-c03d826199d4"
+        "outputId": "a8da2b7b-c47b-4f2d-a9cf-c958a52fa6f5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: fireducks in /usr/local/lib/python3.11/dist-packages (1.2.7)\n",
-            "Requirement already satisfied: firefw==1.2.7 in /usr/local/lib/python3.11/dist-packages (from fireducks) (1.2.7)\n",
+            "Collecting fireducks\n",
+            "  Downloading fireducks-1.2.8-cp311-cp311-manylinux_2_28_x86_64.whl.metadata (1.0 kB)\n",
+            "Collecting firefw==1.2.8 (from fireducks)\n",
+            "  Downloading firefw-1.2.8-py3-none-any.whl.metadata (818 bytes)\n",
             "Requirement already satisfied: pandas<2.3.0,>=1.5.3 in /usr/local/lib/python3.11/dist-packages (from fireducks) (2.2.2)\n",
-            "Requirement already satisfied: pyarrow<19.1,>=19.0 in /usr/local/lib/python3.11/dist-packages (from fireducks) (19.0.1)\n",
+            "Collecting pyarrow<19.1,>=19.0 (from fireducks)\n",
+            "  Downloading pyarrow-19.0.1-cp311-cp311-manylinux_2_28_x86_64.whl.metadata (3.3 kB)\n",
             "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2.0.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2.8.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas<2.3.0,>=1.5.3->fireducks) (2025.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas<2.3.0,>=1.5.3->fireducks) (1.17.0)\n",
+            "Downloading fireducks-1.2.8-cp311-cp311-manylinux_2_28_x86_64.whl (7.4 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.4/7.4 MB\u001b[0m \u001b[31m54.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading firefw-1.2.8-py3-none-any.whl (12 kB)\n",
+            "Downloading pyarrow-19.0.1-cp311-cp311-manylinux_2_28_x86_64.whl (42.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.1/42.1 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pyarrow, firefw, fireducks\n",
+            "  Attempting uninstall: pyarrow\n",
+            "    Found existing installation: pyarrow 20.0.0\n",
+            "    Uninstalling pyarrow-20.0.0:\n",
+            "      Successfully uninstalled pyarrow-20.0.0\n",
+            "Successfully installed fireducks-1.2.8 firefw-1.2.8 pyarrow-19.0.1\n",
             "✅ Created 'sales_data.csv'\n"
           ]
         }
@@ -58,25 +74,24 @@
         "\n",
         "!pip install fireducks\n",
         "\n",
-        "FIREDUCKS_FLAG=\"--benchmark-mode\"\n",
-        "\n",
+        "# Set environment variable for benchmark mode\n",
+        "import os\n",
+        "os.environ[\"FIREDUCKS_FLAGS\"] = \"--benchmark-mode\"\n",
         "\n",
         "import pandas as pd\n",
         "import fireducks.pandas as fd\n",
         "import time\n",
         "import numpy as np\n",
         "\n",
-        "#Create dummy sales datasets\n",
-        "\n",
+        "# Create dummy sales dataset\n",
         "df = pd.DataFrame({\n",
-        "  \"product\": np.random.choice([\"apple\", \"banana\", \"orange\", \"kiwi\"], size=1_000_000),\n",
-        "  \"region\": np.random.choice([\"north\", \"south\", \"east\", \"west\"], size=1_000_000),\n",
-        "  \"price\": np.random.uniform(10, 200, size=1_000_000),\n",
-        "  \"units_sold\": np.random.randint(1, 50, size=1_000_000)\n",
+        "    \"product\": np.random.choice([\"apple\", \"banana\", \"orange\", \"kiwi\"], size=1_000_000),\n",
+        "    \"region\": np.random.choice([\"north\", \"south\", \"east\", \"west\"], size=1_000_000),\n",
+        "    \"price\": np.random.uniform(10, 200, size=1_000_000),\n",
+        "    \"units_sold\": np.random.randint(1, 50, size=1_000_000)\n",
         "})\n",
         "df.to_csv(\"sales_data.csv\", index=False)\n",
-        "print(\"✅ Created 'sales_data.csv'\")\n",
-        "\n"
+        "print(\"✅ Created 'sales_data.csv'\")"
       ]
     },
     {
@@ -86,10 +101,11 @@
         "\n",
         "start = time.time()\n",
         "pandas_df = pd.read_csv(\"sales_data.csv\")\n",
-        "print(\"📄 Pandas Read Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "print(\"📄 Pandas Read Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
+        "\n",
         "start = time.time()\n",
         "fd_df = fd.read_csv(\"sales_data.csv\")\n",
-        "print(\"🔥 FireDucks Read Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "print(\"🔥 FireDucks Read Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
         "\n"
       ],
       "metadata": {
@@ -97,16 +113,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7UfW3huyBqc",
-        "outputId": "87f171b0-1f44-43bf-cd04-77304224c397"
+        "outputId": "931046be-8037-4f35-c591-69fd14a46600"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📄 Pandas Read Time: 0.8643 sec\n",
-            "🔥 FireDucks Read Time: 0.0347 sec\n"
+            "📄 Pandas Read Time: 357.55 ms\n",
+            "🔥 FireDucks Read Time: 53.36 ms\n"
           ]
         }
       ]
@@ -117,11 +133,12 @@
         "#Filter ->price>100\n",
         "\n",
         "start = time.time()\n",
-        "filtered_pandas = pandas_df[pandas_df['price'] > 100]\n",
-        "print(\"📉 Pandas Filter Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "pandas_df[pandas_df['price'] > 100]\n",
+        "print(\"📉 Pandas Filter Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
+        "\n",
         "start = time.time()\n",
-        "filtered_fd = fd_df[fd_df['price'] > 100]\n",
-        "print(\"🔥 FireDucks Filter Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "fd_df[fd_df['price'] > 100]\n",
+        "print(\"🔥 FireDucks Filter Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
         "\n"
       ],
       "metadata": {
@@ -129,16 +146,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oppnhxVLyN_U",
-        "outputId": "8d84936c-c523-4dd2-a300-d95a7c6b2a50"
+        "outputId": "1a3126c4-2c20-4ac1-ca6f-e096ed45f6fd"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📉 Pandas Filter Time: 0.0511 sec\n",
-            "🔥 FireDucks Filter Time: 0.0009 sec\n"
+            "📉 Pandas Filter Time: 23.37 ms\n",
+            "🔥 FireDucks Filter Time: 44.16 ms\n"
           ]
         }
       ]
@@ -149,31 +166,28 @@
         "#Group by region, average price\n",
         "\n",
         "start = time.time()\n",
-        "\n",
-        "group_pandas = filtered_pandas.groupby('region')['price'].mean().reset_index()\n",
-        "\n",
-        "print(\"📊 Pandas GroupBy Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "pandas_df.groupby('region')['price'].mean().reset_index()\n",
+        "print(\"📊 Pandas GroupBy Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
         "\n",
         "start = time.time()\n",
-        "group_fd = filtered_fd.groupby('region')['price'].mean().reset_index()\n",
-        "\n",
-        "print(\"🔥 FireDucks GroupBy Time:\", round(time.time() - start, 4), \"sec\")\n"
+        "fd_df.groupby('region')['price'].mean().reset_index()\n",
+        "print(\"🔥 FireDucks GroupBy Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HJLIKFb0fhH",
-        "outputId": "efd701da-5a6c-46a1-f6ae-1a8f78b71604"
+        "outputId": "7941d68d-8e02-4982-e8de-ca15e1999be5"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📊 Pandas GroupBy Time: 0.0481 sec\n",
-            "🔥 FireDucks GroupBy Time: 0.0029 sec\n"
+            "📊 Pandas GroupBy Time: 60.97 ms\n",
+            "🔥 FireDucks GroupBy Time: 17.49 ms\n"
           ]
         }
       ]
@@ -183,13 +197,16 @@
       "source": [
         "#Sort by average price descending\n",
         "\n",
+        "\n",
         "start = time.time()\n",
-        "sorted_pandas = group_pandas.sort_values(by='price', ascending=False)\n",
-        "print(\"🔽 Pandas Sort Time:\", round(time.time() - start, 4), \"sec\")\n",
+        "pandas_df.groupby('region')['price'].mean().reset_index().sort_values(by='price', ascending=False)\n",
+        "print(\"🔽 Pandas Sort Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
+        "\n",
         "start = time.time()\n",
-        "sorted_fd = group_fd.sort_values(by='price', ascending=False)\n",
-        "print(\"🔥 FireDucks Sort Time:\", round(time.time() - start, 4), \"sec\")\n",
-        "# -----------------------------------\n",
+        "fd_df.groupby('region')['price'].mean().reset_index().sort_values(by='price', ascending=False)\n",
+        "print(\"🔥 FireDucks Sort Time:\", round((time.time() - start) * 1000, 2), \"ms\")\n",
+        "\n",
+        "# ----------------------\n",
         "print(\"✅ Sales Benchmark Completed!\")\n",
         "\n"
       ],
@@ -198,16 +215,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "972Kro1W0mvu",
-        "outputId": "732bd6b1-a28b-48d4-9cad-54a48d411046"
+        "outputId": "fb1687e2-0e37-4dee-ad25-db7c1e8b3eac"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🔽 Pandas Sort Time: 0.0007 sec\n",
-            "🔥 FireDucks Sort Time: 0.0004 sec\n",
+            "🔽 Pandas Sort Time: 56.23 ms\n",
+            "🔥 FireDucks Sort Time: 14.92 ms\n",
             "✅ Sales Benchmark Completed!\n"
           ]
         }
